# OGLFrameworkLib_uulm

./: .gitmodules  CMakeLists.txt  README.md
OGLFrameworkLib/: constants.h  main.h  oglErrorHandling.cpp  stbfix.cpp
OGLFrameworkLib/app/: ApplicationBase.cpp  ApplicationBase.h  Configuration.cpp  Configuration.h  GLWindow.cpp  GLWindow.h
OGLFrameworkLib/app/gui/: GuiHelper.cpp  GuiHelper.h  imgui_impl_gl3.cpp  imgui_impl_gl3.h  imgui_impl_glfw_gl3.cpp
OGLFrameworkLib/core/: AnimationManagerSerializationHelper.cpp  AnimationManagerSerializationHelper.h  Arcball.cpp  Arcball.h  GPUProgramManager.cpp  GPUProgramManager.h  Resource.cpp  Resource.h  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  VolumeManager.h  boost_helper.h  glm_helper.h  owned_ptr.h  serializationHelper.h  type_traits.h
OGLFrameworkLib/core/math/: MatrixStack.h  transforms.h  triangles.h
OGLFrameworkLib/eval/: ProfilingHelper.cpp  ProfilingHelper.h  ProfilingSystem.cpp  ProfilingSystem.h
OGLFrameworkLib/gfx/: AnimationManager.cpp  AnimationManager.h  ArcballCamera.cpp  ArcballCamera.h  CameraView.cpp  CameraView.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  OBJMesh.cpp  OrthogonalView.cpp  OrthogonalView.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PickHandler.cpp  PickHandler.h  SpotLight.cpp  Vertices.h  WaypointAnimation.cpp  WaypointAnimation.h
OGLFrameworkLib/gfx/animation/: AnimationManager.cpp  AnimationManager.h  BaseAnimation.cpp  BaseAnimation.h  OrbitAnimation.cpp  OrbitAnimation.h  RotationAnimation.cpp  RotationAnimation.h  WaypointAnimation.cpp  WaypointAnimation.h
OGLFrameworkLib/gfx/glrenderer/: Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  GLBatchRenderTarget.cpp  GLBatchRenderTarget.h  GLBuffer.cpp  GLBuffer.h  GLRenderTarget.cpp  GLRenderTarget.h  GLTexture.cpp  GLTexture.h  GLTexture2D.cpp  GLTexture2D.h  GLTexture3D.cpp  GLTexture3D.h  GLUniformBuffer.cpp  GLUniformBuffer.h  GLVertexAttributeArray.cpp  GLVertexAttributeArray.h  GPUProgram.cpp  GPUProgram.h  MeshRenderable.cpp  MeshRenderable.h  OpenGLRAIIWrapper.h  ScreenQuadRenderable.cpp  ScreenQuadRenderable.h  ScreenText.cpp  ScreenText.h  Shader.cpp  Shader.h  ShaderBufferBindingPoints.cpp  ShaderBufferBindingPoints.h  ShaderBufferObject.cpp  ShaderBufferObject.h
OGLFrameworkLib/gfx/light/: ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h
OGLFrameworkLib/gfx/mesh/: AssImpScene.cpp  AssImpScene.h  ConnectivityMesh.cpp  ConnectivityMesh.h  ConnectivityMeshImpl.cpp  ConnectivityMeshImpl.h  ConnectivitySubMesh.cpp  ConnectivitySubMesh.h  Mesh.cpp  Mesh.h  OBJMesh.cpp  OBJMesh.h  SceneMeshNode.cpp  SceneMeshNode.h  SimpleMeshRenderer.cpp  SimpleMeshRenderer.h  SubMesh.cpp  SubMesh.h  SubMeshMaterialChunk.h
OGLFrameworkLib/gfx/postprocessing/: BloomEffect.cpp  BloomEffect.h  DepthOfField.cpp  DepthOfField.h  FilmicTMOperator.cpp  FilmicTMOperator.h  GaussianBlur.cpp  GaussianBlur.h
OGLFrameworkLib/gfx/volumes/: MinMaxVolume.cpp  MinMaxVolume.h  SPHVolume.cpp  SPHVolume.h  Volume.cpp  Volume.h  VolumeBrickOctree.cpp  VolumeBrickOctree.h  VolumeCubeRenderable.cpp  VolumeCubeRenderable.h
OGLFrameworkLib/gpgpu/: CUDAAddNoise.cu  CUDAImage.cpp  GLVolumeInitializer.cpp  GLVolumeInitializer.h  Image2DStatistics.cpp  Image2DStatistics.h
OGLFrameworkLib/resources/scene/: stpeters.hdr
OGLFrameworkLib/resources/shader/: brdfs.glsl  bumpMapping.glsl  colorConversions.glsl  coordinates.glsl  debugTexOut.fp  drawBump.fp  drawBump.vp  drawSimple.vp  drawVertex.fp  drawVertex.vp  gaussianFilter.cp  lights.glsl  perspective.glsl  shadowMap.fp  shadowMap.vp
OGLFrameworkLib/resources/shader/dof/: blurDoF.cp  coc.cp  combineDoF.cp
OGLFrameworkLib/resources/shader/envmap/: cubetospherical.cp  drawEnvMap.fp  drawEnvMap.vp  sphericalIrradiance.cp
OGLFrameworkLib/resources/shader/eval/: diffImage.cp  reductionRMS.cp
OGLFrameworkLib/resources/shader/gui/: tfRenderGUI.fp  tfRenderGUI.vp
OGLFrameworkLib/resources/shader/minmaxmaps/: genMinMax.cp  genMinMaxLevels.cp  genMipLevels.cp
OGLFrameworkLib/resources/shader/sphvolumes/: genSPHMap.cp
OGLFrameworkLib/resources/shader/tm/: blurBloom.cp  combineBloom.cp  filmic.fp  glareDetect.cp
OGLFrameworkLib/resources/shader/volume/: diffImage.cp  downsize3DTex16.cp  downsize3DTex32.cp  downsize3DTex8.cp  downsizeDenoise3DTex16.cp  downsizeDenoise3DTex32.cp  downsizeDenoise3DTex8.cp  renderCubeCoordinates.vp  renderVolume.fp  synthChecker.cp  synthSpherical.cp  synthStripes.cp
OGLFrameworkLib/scene/: ArcballRotatedSceneRenderable.cpp  ArcballRotatedSceneRenderable.h  EnvironmentMapGenerator.cpp  EnvironmentMapGenerator.h  EnvironmentMapRenderer.cpp  EnvironmentMapRenderer.h  SceneRenderable.cpp  SceneRenderable.h  ScreenCaptureHelper.cpp  ScreenCaptureHelper.h
OGLFrameworkLib/volumeScene/: TransferFunction.cpp  TransferFunction.h  TransferFunctionGUI.cpp  TransferFunctionGUI.h
